[package]
name = "kvlog"
version = "0.1.2"
edition = "2021"
authors = ["Thomas Dagenais <exrok@i64.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/exrok/kvlog"
description = "Fast Structual and Hierarchical binary logging for rust"
rust-version = "1.84"

[dependencies]
itoa = "1.0.10"
jiff = { version = "0.2", optional = true }
uuid = { version = "1.7.0", default-features = false }
kvlog-macros = "0.1"

[features]
debug = []
jiff-02 = ["dep:jiff"]

[dev-dependencies]
rand = { version = "0.9", features = ["small_rng"] }
